--- a/styles/main.scss
+++ b/styles/main.scss
@@ -547,6 +547,7 @@ footer {
   .find-partner {
         display: flex;
         align-items: center;
+      justify-content: center;
     }
 @media screen and (min-width: 767px) {
     .header {
